[project]
name = "mlexp"
version = "0.1.0"
description = "Model-agnostic ML experimentation: nested CV, hyperparameter tuning, distance-based sample weighting, self-training"
readme = "README.md"
authors = [
    { name = "Aaditya Vardhan", email = "aaditya.das@procdna.com" }
]
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/mlexp"]
